[Qt] QNX build fails due to signature change in gl2.h header (glShaderSource) https://bugs.webkit.org/show_bug.cgi?id=98038

Patch by Milian Wolff <milian.wolff@kdab.com> on 2012-11-13
Reviewed by Simon Hausmann.

Cast the function to the expected type, just like it is done on non-Qt/OpenGL2 ES platforms.

* platform/graphics/OpenGLShims.cpp:
(WebCore):

Canonical link: https://commits.webkit.org/120209@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134476 268f45cc-cd09-0410-ab3c-d52691b4dbfc